// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<VariantSelectModal /> should render the actions 1`] = `
<BasicDialog
  actions={
    [
      {
        "action": [Function],
        "label": "dismiss",
      },
      {
        "action": [Function],
        "label": "confirm",
      },
    ]
  }
  title="This is the title."
>
  <Translate
    acceptPlainTextWithPlaceholders={false}
    className={null}
    params={{}}
    role={null}
    string="This is the message."
    transform={null}
  />
</BasicDialog>
`;

exports[`<VariantSelectModal /> should render with minimal props 1`] = `
<BasicDialog
  actions={[]}
  title={null}
>
  <Translate
    acceptPlainTextWithPlaceholders={false}
    className={null}
    params={{}}
    role={null}
    string="This is the message."
    transform={null}
  />
</BasicDialog>
`;
